WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12618
REGRESSION (SearchField): Dragging across the text and releasing over the clear button clears the field
https://bugs.webkit.org/show_bug.cgi?id=12618
Summary
REGRESSION (SearchField): Dragging across the text and releasing over the cle...
mitz
Reported
2007-02-05 12:25:56 PST
The search field's clear (x) button responds to a mouseup by clearing the field even if the mousedown was not inside the button. This is especially frustrating when dragging to select or scroll past the right edge of the visible text and then releasing the mouse over the close button.
Attachments
Make the cancel button capturing
(6.62 KB, patch)
2007-02-05 13:43 PST
,
mitz
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-02-05 13:43:38 PST
Created
attachment 12945
[details]
Make the cancel button capturing Includes test and change log
Sam Weinig
Comment 2
2007-02-05 15:04:56 PST
Landed in
r19411
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug