LayoutTests:

Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12618
          REGRESSION (SearchField): Dragging across the text and releasing over the clear button clears the field

        * fast/forms/search-cancel-button-mouseup-expected.txt: Added.
        * fast/forms/search-cancel-button-mouseup.html: Added.

WebCore:

        Reviewed by Adele.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12618
          REGRESSION (SearchField): Dragging across the text and releasing over the clear button clears the field

        Test: fast/forms/search-cancel-button-mouseup.html

        Made the cancel button capturing.

        * html/HTMLTextFieldInnerElement.cpp:
        (WebCore::HTMLSearchFieldCancelButtonElement::HTMLSearchFieldCancelButtonElement):
        (WebCore::HTMLSearchFieldCancelButtonElement::defaultEventHandler):
        * html/HTMLTextFieldInnerElement.h:



Canonical link: https://commits.webkit.org/16321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19411 268f45cc-cd09-0410-ab3c-d52691b4dbfc