WebCore/html/HTMLTextFieldInnerElement.h
@@ -62,6 +62,8 @@ class HTMLSearchFieldCancelButtonElement : public HTMLTextFieldInnerElement {
 public:
     HTMLSearchFieldCancelButtonElement(Document*);
     virtual void defaultEventHandler(Event*);
+private:
+    bool m_capturing;
 };
 
 } //namespace
